--- a/app/src/main/res/layout/pk.xml
+++ b/app/src/main/res/layout/pk.xml
@@ -9,59 +9,69 @@
         <!--android:id="@+id/pk_bar"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content" />-->
-    <ImageView
-        android:layout_gravity="center"
-        android:src="@drawable/icon_pk4"
-        android:scaleType="centerCrop"
-        android:layout_margin="25dp"
-        android:layout_width="145dp"
-        android:layout_height="45dp" />
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/pk_heroes"
-            android:background="@drawable/icon_pk4_button"
-            android:text="英雄榜"
-            android:layout_gravity="center"
-            android:layout_margin="25dp"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:layout_width="280dp"
-            android:layout_height="45dp" />
-        <Button
-            android:id="@+id/pk_pk"
-            android:background="@drawable/icon_pk4_button1"
-            android:text="我要PK"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:layout_margin="25dp"
-            android:layout_width="280dp"
-            android:layout_height="45dp" />
-        <Button
-            android:id="@+id/pk_history"
-            android:background="@drawable/icon_pk4_button2"
-            android:text="PK记录"
-            android:layout_gravity="center"
-            android:layout_margin="25dp"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:layout_width="280dp"
-            android:layout_height="45dp" />
-        <Button
-            android:id="@+id/pk_grade"
-            android:background="@drawable/icon_pk4_button3"
-            android:text="评委录入PK分数"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            android:layout_width="280dp"
-            android:layout_height="45dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="20dp">
+            <ImageView
+                android:layout_gravity="center"
+                android:src="@drawable/icon_pk4"
+                android:scaleType="centerCrop"
+                android:layout_margin="25dp"
+                android:layout_width="145dp"
+                android:layout_height="45dp" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/pk_heroes"
+                    android:background="@drawable/icon_pk4_button"
+                    android:text="英雄榜"
+                    android:layout_gravity="center"
+                    android:layout_margin="25dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:layout_width="280dp"
+                    android:layout_height="45dp" />
+                <Button
+                    android:id="@+id/pk_pk"
+                    android:background="@drawable/icon_pk4_button1"
+                    android:text="我要PK"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:layout_margin="25dp"
+                    android:layout_width="280dp"
+                    android:layout_height="45dp" />
+                <Button
+                    android:id="@+id/pk_history"
+                    android:background="@drawable/icon_pk4_button2"
+                    android:text="PK记录"
+                    android:layout_gravity="center"
+                    android:layout_margin="25dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:layout_width="280dp"
+                    android:layout_height="45dp" />
+                <Button
+                    android:id="@+id/pk_grade"
+                    android:background="@drawable/icon_pk4_button3"
+                    android:text="评委录入PK分数"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_width="280dp"
+                    android:layout_height="45dp"
 
-            android:layout_marginTop="25dp" />
-    </LinearLayout>
+                    android:layout_marginTop="25dp" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
