--- a/app/src/main/res/layout/intermediate_once_item.xml
+++ b/app/src/main/res/layout/intermediate_once_item.xml
@@ -22,20 +22,49 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/intermediate_first_answer"
-                android:src="@mipmap/icon_logo"
-                android:layout_margin="10dp"
+            <RelativeLayout
                 android:layout_alignParentLeft="true"
-                android:layout_width="150dp"
-                android:layout_height="150dp" />
-            <ImageView
-                android:id="@+id/intermediate_first_respondence"
-                android:src="@mipmap/icon_logo"
-                android:layout_margin="10dp"
+                android:layout_width="160dp"
+                android:layout_height="160dp">
+                <ImageView
+                    android:id="@+id/intermediate_first_answer"
+                    android:src="@mipmap/icon_logo"
+                    android:layout_margin="10dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp" />
+                <ImageView
+                    android:id="@+id/select0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/icon_choice"
+                    android:visibility="gone" />
+                <!-- 这里是当该图片被选上的时候打上小勾的,因此起初是隐藏不显示的 -->
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_alignParentRight="true"
-                android:layout_width="150dp"
-                android:layout_height="150dp" />
+                android:layout_width="160dp"
+                android:layout_height="160dp">
+                <ImageView
+                    android:id="@+id/intermediate_first_respondence"
+                    android:src="@mipmap/icon_logo"
+                    android:layout_margin="10dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp" />
+                <ImageView
+                    android:id="@+id/select1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/icon_choice"
+                    android:visibility="gone" />
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
